--- a/python-app.yml
+++ b/python-app.yml
@@ -3,7 +3,7 @@
   tasks:
 
     - name: install packages
-      apt: name={{ item }} update_cache=yes state=latest
+      yum: name={{ item }} update_cache=yes state=latest
       with_items:
         - python
         - git
