--- a/python-app.yml
+++ b/python-app.yml
@@ -33,4 +33,4 @@
   
   handlers:
     - name: restart supervisor
-      service: name=supervisor state=restarted
+      supervisorctl: name=myapp state=started
